force-app/main/default/objects/tc9_pr__Debug_Header__c/tc9_pr__Debug_Header__c.object-meta.xml
<CustomObject>
    <label>Debug Header</label>
    <nameField>
        <displayFormat>Debug Header - {000000}</displayFormat>
        <label>Debug Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>