force-app/main/default/objects/tc9_pr__Debug_Header__c/fields/tc9_pr__Batch_Log__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Batch_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Id of the corresponding Batch Log.</description>
    <inlineHelpText>The Id of the corresponding Batch Log.</inlineHelpText>
    <label>Batch Log</label>
    <referenceTo>tc9_pr__Batch_Logs__c</referenceTo>
    <relationshipLabel>Debug Headers</relationshipLabel>
    <relationshipName>Debug_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>