force-app/main/default/objects/tc9_pr__Debug_Header__c/fields/tc9_pr__Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Description__c</fullName>
    <description>The description of this Debug Header.</description>
    <inlineHelpText>The description of this Debug Header.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>