force-app/main/default/objects/tc9_pr__Debug_Header__c/fields/tc9_pr__Do_Not_Delete__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Do_Not_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Debug Header record and related Debug Log records should not be deleted by the scheduled job.</description>
    <inlineHelpText>Indicates that the Debug Header record and related Debug Log records should not be deleted by the scheduled job.</inlineHelpText>
    <label>Do Not Delete</label>
    <type>Checkbox</type>
</CustomField>