force-app/main/default/objects/tc9_pr__Debug_Header__c/fields/tc9_pr__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Job_Id__c</fullName>
    <description>The Id of the corresponding Apex Job.</description>
    <inlineHelpText>The Id of the corresponding Apex Job.</inlineHelpText>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>