force-app/main/default/objects/tc9_pr__Debug_Header__c/fields/tc9_pr__Process_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Process_Name__c</fullName>
    <description>The process name which generated this Debug Header.</description>
    <inlineHelpText>The process name which generated this Debug Header.</inlineHelpText>
    <label>Process Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>